# jigsaw-companion

./: .gitignore  README.md
extension/: inject.js  main.js  manifest.json  popup.html
scripts/: generate_git.py
server/: package.json
server-rust/: package.json
server-rust/src-tauri/: Cargo.toml  tauri.conf.json
server-rust/src-tauri/src/routes/: moves.rs
server/src-tauri/: Cargo.toml
server/src-tauri/src/: main.rs
