[package]
name = "server"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "server_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4.11.0"
dirs = "6.0.0"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
bytes = "1.10.1"
chrono = "0.4.41"
directories = "5"
tokio = { version = "1.46.1", features = ["fs"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
actix-cors = "0.7.1"
